longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhornui
  namespace: hello
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: my-ca-issuer
    # configuring the certificate
    cert-manager.io/common-name: "longhornui.services.labk3s.perihelion.lan/"
    cert-manager.io/subject-organizations: "Home Lab"
    cert-manager.io/subject-organizationalunits: "K3s Lab"
    cert-manager.io/duration: 720h
    cert-manager.io/renew-before: 240h
    cert-manager.io/usages: "digital signature,key agreement,server auth, client auth"
spec:
  rules:
  - host: "longhornui.services.labk3s.perihelion.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-docker
            port:
              number: 80
  tls:
  - hosts:
    - longhornui.services.labk3s.perihelion.lan
    secretName: helloworld-docker-cert
